# mxross-canvas

./: Cargo.toml
.github/workflows/: cross-platform-build.yml
crates/mxross-android/: Cargo.toml
crates/mxross-android-media/: Cargo.toml
crates/mxross-android-media/src/: lib.rs
crates/mxross-android/src/: brush.rs  camera.rs  canvas.rs  gizmo.rs  gpu.rs  lib.rs  test_cube.rs  ui.rs
crates/mxross-android/src/shaders/: canvas_display.wgsl  canvas_stamp.wgsl  test_cube.wgsl
crates/mxross-brush/: Cargo.toml
crates/mxross-brush/src/: engine.rs  hook.rs  lib.rs  preset.rs  smoothing.rs
crates/mxross-camera/: Cargo.toml
crates/mxross-camera/src/: lib.rs  orbit.rs
crates/mxross-canvas-core/: Cargo.toml
crates/mxross-canvas-core/src/: lib.rs
crates/mxross-document/: Cargo.toml
crates/mxross-export/: Cargo.toml
crates/mxross-export/src/: lib.rs
crates/mxross-ffi/: Cargo.toml
crates/mxross-ffi/src/: lib.rs
crates/mxross-interaction/: Cargo.toml
crates/mxross-interaction/src/: lib.rs
crates/mxross-math/: Cargo.toml
crates/mxross-math/src/: lib.rs
crates/mxross-render-core/: Cargo.toml
crates/mxross-render-core/src/: lib.rs
crates/mxross-render-cpu/: Cargo.toml
crates/mxross-render-cpu/src/: lib.rs
crates/mxross-render-gpu/: Cargo.toml
crates/mxross-render-gpu/src/: canvas.rs  lib.rs
crates/mxross-render-gpu/src/shaders/: canvas_display.wgsl  canvas_stamp.wgsl  canvas_stamp_pixel.wgsl
crates/src/: lib.rs
crates/​mxross-android/src/: lib.rs
scripts/: build_summary.py
src/: lib.rs
src/canvas/: mod.rs
src/math/: mod.rs
src/renderer/: mod.rs
src/utils/: mod.rs
