[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Math
glam = { version = "0.25", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11.6"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# NOTE: Graphics (wgpu) will be added later when we implement rendering
# For now, we focus on core logic only

[lib]
crate-type = ["lib", "staticlib"]
