[workspace]
resolver = "2"
members = [
    "crates/mxross-math",
    "crates/mxross-canvas-core",
    "crates/mxross-render-core",
    "crates/mxross-render-cpu",
    "crates/mxross-document",
    "crates/mxross-brush",
    "crates/mxross-ffi",
]

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
debug         = false

[profile.dev]
opt-level = 0
debug     = true
