[workspace]
resolver = "2"
members = [
    "crates/mxross-math",
    "crates/mxross-canvas-core",
    "crates/mxross-render-core",
    "crates/mxross-render-cpu",
    "crates/mxross-render-gpu",
    "crates/mxross-camera",
    "crates/mxross-interaction",
    "crates/mxross-export",
    "crates/mxross-android-media",
    "crates/mxross-document",
    "crates/mxross-brush",
    "crates/mxross-ffi",
    "crates/mxross-android", 
]


[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
debug         = false

[profile.dev]
opt-level = 0
debug     = true
