[package]
name    = "mxross-android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
# mxross-ffi (not mxross-canvas-core directly) — reuses init_logger() and is
# the right place for the eventual C-ABI surface too.
mxross-ffi = { path = "../mxross-ffi" }
# Camera type itself — ui.rs/gizmo.rs reference OrbitCamera/CameraMode/Axis
# directly for widget state, even though gpu.rs only ever touches the
# camera indirectly through mxross-interaction's controller.
mxross-camera = { path = "../mxross-camera" }
# DabPlan — the one brush type gpu.rs still needs by name, to convert
# into mxross-render-gpu's Dab. Everything else brush-related (preset,
# engine, smoothing) is now fully internal to mxross-interaction.
mxross-brush = { path = "../mxross-brush" }
# The interaction layer: routes pointer events to orbit/zoom/paint.
mxross-interaction = { path = "../mxross-interaction" }
# GPU rendering: the paint canvas texture + pipelines.
mxross-render-gpu = { path = "../mxross-render-gpu" }
# Needed explicitly so we can name HardwareBufferFormat/NativeWindow in our
# own code — android-activity depends on the same ndk 0.9, so this resolves
# to one shared copy in the dependency graph, not a duplicate.
ndk = "0.9"
wgpu = "29.0"
raw-window-handle = "0.6"
# Drives wgpu's async instance/adapter/device setup synchronously inside
# the android_main poll loop — no async runtime needed for anything else.
pollster = "0.4"
log = "0.4"
# UI layer — the real foundation for every future UI element (tool
# palette, layers panel, brush settings, ...).
egui = "0.34"
egui-wgpu = "0.34"

[package.metadata.android]
package      = "com.midmanstudio.mxross"
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version    = 26
target_sdk_version = 33

[package.metadata.android.application]
label = "MxRoss Canvas"
