[package]
name        = "mxross-canvas-core"
version     = "0.1.0"
edition     = "2021"
authors     = ["MidManStudio"]
description = "MxRoss Canvas scene data — Canvas, Layer, CanvasPoint. Pure data, no rendering."
license     = "MIT"

[dependencies]
mxross-math = { path = "../mxross-math" }
serde       = { version = "1.0", features = ["derive"] }
log         = "0.4"
