[package]
name        = "mxross-ffi"
version     = "0.1.0"
edition     = "2021"
authors     = ["MidManStudio"]
description = "MxRoss Canvas FFI surface — links into Android/iOS/Desktop host apps"
license     = "MIT"

[lib]
name       = "mxross_ffi"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
mxross-canvas-core = { path = "../mxross-canvas-core" }
mxross-render-cpu  = { path = "../mxross-render-cpu" }
mxross-render-core = { path = "../mxross-render-core" }
log                = "0.4"

# Moved env_logger here to prevent unnecessary bloat/compilation on Android targets
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.6"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
